--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ body{
     text-align: center;
     justify-content: center;
     align-items: center;
-    background-color: rgb(199, 196, 196);
-    height: 300px;
+    background-color: rgb(243, 208, 111);
+    height: 400px;
     width: 70%;
     border-radius: 50px 50px;
     border-style: solid
@@ -21,7 +21,7 @@ body{
 .container{
     margin-right: 2%;
     margin-left: 2% ;
-    margin-top: 9%;
+    margin-top: 5%;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -31,7 +31,7 @@ body{
     border-radius: 50px 50px;
 }
 .options{
-    margin-top: 9%;
+    margin-top: 6%;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -41,4 +41,25 @@ body{
 
     font-family: Arial, Helvetica, sans-serif;
     height: 30px;
+}
+.geo{
+    margin-top: 10px;
+    background-color: #2e2e2e;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 50px 50px;
+}
+.input{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
 }
